@@ -81,6 +81,7 @@
   - HTMLize v1.54 🠆 v1.56
   - XML-RPC v1.6.12 🠆 1.6.15
   - Convert system definition from hashtables to structs
+  - Load categories, tags, and pages without failing on error
 
 * v1.0
 ** v1.0.00
